examples/failing/ExportExplicit3/M1.purs
module M1 (X(..)) where

data X = X | Y
data Z = Z
